<resources>
    <string name="app_name">Mascotas</string>
    <string name="logotipo">logotipo de compañia</string>
    <string name="mnombre">Nombre</string>
    <string name="mraiting">Raiting</string>

    <string name="descripcion_foto_mascota">Foto de la mascota</string>
    <string name="descripcion_huesito_blanco">Boton de like</string>
    <string name="descripcion_huesito_color">Imagen de raiting</string>

    <string name="descripcion_foto_developer">Foto del desarrollador</string>

    <string name="boton_raiting">Raiting</string>

    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de</string>

    <string name="acerca_de_name">Desarrollador Android Fernando Ojeda Caballero</string>
    <string name="acerca_de_company">IT Development Company</string>
    <string name="acerca_de_year">2016</string>

    <string name="contacto_nombre">Nombre</string>
    <string name="contacto_correo">Correo</string>
    <string name="contacto_mensaje">Mensaje</string>
    <string name="contacto_boton_enviar">Enviar comentario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
