<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.curso.logotipo.AcercaDeActivity">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/action_bar"
        >
    </include>

    <android.support.v7.widget.CardView
        android:id="@+id/cvDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/miActionBar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="7dp"
            >

            <ImageView
                android:id="@+id/imgFotoDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fotodeveloper"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/descripcion_foto_developer"
                />

            <TextView
                android:id="@+id/tvNameDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acerca_de_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                />

            <TextView
                android:id="@+id/tvCompanyDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acerca_de_company"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                />

            <TextView
                android:id="@+id/tvYearDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acerca_de_year"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                />


        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
