<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp"
        >

        <ImageView
            android:id="@+id/imgFotoCVP"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/revisionporpares1_curso3_perritologo"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/descripcion_foto_mascota"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/tvRaitingCVP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mraiting"
                android:textSize="@dimen/nombre_cardview"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:id="@+id/imgRaitingCVP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_huesito_color"
                android:contentDescription="@string/descripcion_huesito_color"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>